# bfm

./: .gitignore  LICENSE  README.md  lepl1110.py
data/: U.txt  V.txt
examples/: benchmark.py  deformation.py  lepl110.py  lepl1110.py
lib/: math.h  matrix.c  matrix.h  mesh.c  mesh.h  parse.c  parse.h  state.h  vec.h
libbfm/: CMakeLists.txt
libbfm/src/: .clangd  condition.c  elasticity.c  ez.c  force.c  instance.c  material.c  matrix.c  mesh.c  obj.c  parse.c  perm.c  rule.c  shape.c  sim.c  state.c  system.c  vec.c
libbfm/src/bfm/: .clangd  bfm.h  condition.h  elasticity.h  ez.h  force.h  instance.h  material.h  math.h  matrix.h  mesh.h  obj.h  parse.h  perm.h  rule.h  shape.h  sim.h  system.h
meshes/: 8.lepl1110  cross.py
problems/: problem.txt
pybfm/: bfm.py  gen_libbfm.py  material.py  mesh.py  obj.py  pyproject.toml
pybfm/bfm/: __init__.py  bfm.py  condition.py  ez.py  force.py  gen_libbfm.py  instance.py  material.py  matrix.py  mesh.py  obj.py  rule.py  scenery.py  shader.py  sim.py  state.py  util.py  vec.py
shaders/: scenery.frag  scenery.vert
shaders/sim/: deformation.frag  deformation.vert  line_deformation.frag  line_deformation.vert
src/: main.c
web/: index.html  index.js  matrix.js
