[project]
name = "bfm"
version = "0.2.0"
description = "Python wrapper around BFM library for FEM/FEA"
authors = [
	{name = "Alexandre Dewilde", email = "alexandredewilde.contact@gmail.com"},
	{name = "Aymeric Wibo", email = "obiwac@gmail.com"},
]
dependencies = [
	"pyglet",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
bfm = ["*.so"]
